<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/products_fragment">

    <fragment
        android:id="@+id/products_fragment"
        android:name="com.example.appcommerceclone.ui.product.ProductsFragment"
        android:label="@string/fragment_products_label"
        tools:layout="@layout/fragment_products">
        <action
            android:id="@+id/action_products_fragment_to_productDetailFragment"
            app:destination="@id/product_detail_fragment" />
    </fragment>

    <fragment
        android:id="@+id/product_detail_fragment"
        android:name="com.example.appcommerceclone.ui.product.ProductDetailFragment"
        android:label="@string/fragment_product_detail_label"
        tools:layout="@layout/fragment_product_detail">
        <action
            android:id="@+id/action_productDetailFragment_to_cart_fragment"
            app:destination="@id/cart_fragment"
            app:popUpTo="@id/products_fragment" />
        <action
            android:id="@+id/action_productDetailFragment_to_favorites_fragment"
            app:destination="@id/favorites_fragment"
            app:popUpTo="@id/products_fragment" />
    </fragment>

    <fragment
        android:id="@+id/cart_fragment"
        android:name="com.example.appcommerceclone.ui.cart.CartFragment"
        android:label="@string/fragment_cart_label"
        tools:layout="@layout/fragment_cart">
        <action
            android:id="@+id/action_cart_fragment_to_orders_fragment"
            app:destination="@id/orders_fragment"
            app:popUpTo="@id/products_fragment" />
    </fragment>

    <fragment
        android:id="@+id/profile_fragment"
        android:name="com.example.appcommerceclone.ui.user.ProfileFragment"
        android:label="@string/fragment_profile_label"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profile_fragment_to_picture_chooser_dialog_fragment"
            app:destination="@id/picture_chooser_dialog_fragment" />
    </fragment>

    <dialog
        android:id="@+id/picture_chooser_dialog_fragment"
        android:name="com.example.appcommerceclone.ui.user.PictureChooserDialogFragment"
        android:label="@string/fragment_picture_chooser_dialog_label"
        tools:layout="@layout/fragment_picture_chooser_dialog" />

    <fragment
        android:id="@+id/categories_fragment"
        android:name="com.example.appcommerceclone.ui.product.CategoriesFragment"
        android:label="@string/fragment_categories_label"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/orders_fragment"
        android:name="com.example.appcommerceclone.ui.order.OrdersFragment"
        android:label="@string/fragment_orders_label"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/favorites_fragment"
        android:name="com.example.appcommerceclone.ui.favorites.FavoritesFragment"
        android:label="@string/fragment_favorites_label"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/login_fragment"
        android:name="com.example.appcommerceclone.ui.user.LoginFragment"
        android:label="@string/fragment_login_label"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_fragment_to_register_fragment"
            app:destination="@id/register_fragment" />
    </fragment>

    <fragment
        android:id="@+id/register_fragment"
        android:name="com.example.appcommerceclone.ui.user.RegisterFragment"
        android:label="@string/fragment_register_label"
        tools:layout="@layout/fragment_register" />

    <action
        android:id="@+id/action_global_login_fragment"
        app:destination="@id/login_fragment" />

    <action
        android:id="@+id/action_global_orders_fragment"
        app:destination="@id/orders_fragment" />

</navigation>