<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_email_icon"
        app:startIconTint="@color/icon_color_black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_register_email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_hint_email"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/TextAppearance.AppCommerce.Body.Medium"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_register_email"
        app:startIconDrawable="@drawable/ic_profile_icon"
        app:startIconTint="@color/icon_color_black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_register_username_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_hint_username"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCommerce.Body.Medium"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_register_username"
        app:startIconDrawable="@drawable/ic_password_icon"
        app:startIconTint="@color/icon_color_black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_register_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_hint_password"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCommerce.Body.Medium"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/user_register_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:elevation="@dimen/small_elevation"
        android:text="@string/user_register_btn"
        android:textAppearance="@style/TextAppearance.AppCommerce.Button.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_register_password"/>

</androidx.constraintlayout.widget.ConstraintLayout>