<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:shapeAppearance="@style/AppCommerce.ShapeAppearance.CardView">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_extra_large">

        <TextView
                android:id="@+id/cart_dialog_title"
                style="@style/AppCommerce.TextAppearance.CardView.Center.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cart_dialog_title"
                android:textAlignment="gravity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/cart_dialog_negative"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_size_large"
                android:layout_marginEnd="@dimen/margin_size_medium"
                android:text="@string/cart_dialog_negative"
                android:textAppearance="@style/AppCommerce.TextAppearance.Button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cart_dialog_positive"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/cart_dialog_title"
                app:layout_constraintTop_toBottomOf="@id/cart_dialog_title"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/cart_dialog_positive"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/cart_dialog_positive"
                android:textAppearance="@style/AppCommerce.TextAppearance.Button"
                app:layout_constraintBottom_toBottomOf="@+id/cart_dialog_negative"
                app:layout_constraintEnd_toEndOf="@+id/cart_dialog_title"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cart_dialog_negative"
                app:layout_constraintTop_toTopOf="@+id/cart_dialog_negative"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>