<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/padding_large"
        android:paddingEnd="@dimen/padding_extra_large">

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/product_category_all"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="@dimen/margin_size_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="@style/AppCommerce.ShapeAppearance.CardView.RightRoundedCorners"
            app:strokeColor="@color/stroke_color_dark"
            app:strokeWidth="@dimen/stroke_size_small">

        <TextView
                style="@style/AppCommerce.TextAppearance.Headline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:gravity="start|center_vertical"
                android:text="@string/category_all_products"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/product_category_electronics"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="@dimen/margin_size_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_category_all"
            app:shapeAppearance="@style/AppCommerce.ShapeAppearance.CardView.RightRoundedCorners"
            app:strokeColor="@color/stroke_color_dark"
            app:strokeWidth="@dimen/stroke_size_small">

        <TextView
                style="@style/AppCommerce.TextAppearance.Headline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:gravity="start|center_vertical"
                android:text="@string/category_name_electronics"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/product_category_jewelery"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="@dimen/margin_size_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_category_electronics"
            app:shapeAppearance="@style/AppCommerce.ShapeAppearance.CardView.RightRoundedCorners"
            app:strokeColor="@color/stroke_color_dark"
            app:strokeWidth="@dimen/stroke_size_small">

        <TextView
                style="@style/AppCommerce.TextAppearance.Headline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:gravity="start|center_vertical"
                android:text="@string/category_name_jewelery"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/product_category_mens_clothing"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="@dimen/margin_size_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_category_jewelery"
            app:shapeAppearance="@style/AppCommerce.ShapeAppearance.CardView.RightRoundedCorners"
            app:strokeColor="@color/stroke_color_dark"
            app:strokeWidth="@dimen/stroke_size_small">

        <TextView
                style="@style/AppCommerce.TextAppearance.Headline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:gravity="start|center_vertical"
                android:text="@string/category_name_mens_clothing"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/product_category_womens_clothing"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="@dimen/margin_size_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_category_mens_clothing"
            app:shapeAppearance="@style/AppCommerce.ShapeAppearance.CardView.RightRoundedCorners"
            app:strokeColor="@color/stroke_color_dark"
            app:strokeWidth="@dimen/stroke_size_small">

        <TextView
                style="@style/AppCommerce.TextAppearance.Headline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:gravity="start|center_vertical"
                android:text="@string/category_name_women_s_clothing"/>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
